# modules/users/response/authorize-token.go
@@ -1,0 +1,5 @@
+package users
+
+type SuccessAuthorizeToken struct {
+	Message string `json:"message" example:"token is valid"`
+}
